[gd_scene load_steps=7 format=3 uid="uid://bn3wlq2aob8k0"]

[ext_resource type="Script" uid="uid://t251hpwfilyd" path="res://scripts/Enemy Scripts/BaseEnemy.gd" id="1_cw80a"]
[ext_resource type="Script" uid="uid://c0xeprhbprjvv" path="res://scripts/Enemy Scripts/EnemyUI.gd" id="2_oqxhu"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_md0e3"]
size = Vector2(41, 41)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4ra3w"]
size = Vector2(44, 32.666664)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5uy6h"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4ra3w"]
bg_color = Color(0.9411765, 0.11764706, 0, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[node name="Enemy_Template" type="CharacterBody2D"]
collision_layer = 8
collision_mask = 5
script = ExtResource("1_cw80a")
drop_offset = Vector2(0, 8)

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -32)

[node name="DamageArea" type="CollisionShape2D" parent="."]
position = Vector2(0.5, -21)
shape = SubResource("RectangleShape2D_md0e3")

[node name="ContactArea" type="Area2D" parent="."]
position = Vector2(0, -15.5)
scale = Vector2(1.5, 1.5)
collision_layer = 0

[node name="Contact" type="CollisionShape2D" parent="ContactArea"]
position = Vector2(0, -6.333335)
shape = SubResource("RectangleShape2D_4ra3w")

[node name="EnemyUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -26.0
offset_top = -56.0
offset_right = 24.0
offset_bottom = -51.0

[node name="EnemyUIContainer" type="VBoxContainer" parent="EnemyUI"]
layout_mode = 0
offset_left = 2.0
offset_top = -14.0
offset_right = 52.0
offset_bottom = 5.0

[node name="EnemyName" type="Label" parent="EnemyUI/EnemyUIContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Glob"
horizontal_alignment = 1
vertical_alignment = 1

[node name="EnemyHealthBar" type="ProgressBar" parent="EnemyUI/EnemyUIContainer"]
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_5uy6h")
theme_override_styles/fill = SubResource("StyleBoxFlat_4ra3w")
max_value = 20.0
value = 20.0
show_percentage = false
script = ExtResource("2_oqxhu")
